<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ll_input"
        android:src="@drawable/ic_launcher"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:id="@+id/ll_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="307dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/lg_et_nmae"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_psd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:hint="@string/lg_et_psd"/>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorAccent"></View>

            <TextView
                android:id="@+id/tv_psd_back"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="wrap_content"
                android:textColor="@color/login_btn_text_color"
                android:text="@string/lg_tv_psd_back"/>


        </LinearLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_login"
                android:textColor="@color/ff_white"
                android:text="@string/lg_btn_login"/>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/button_register"
                android:textColor="@color/login_btn_text_color"
                android:layout_gravity="end"
                android:text="@string/lg_btn_register"/>
        </FrameLayout>



    </LinearLayout>

</RelativeLayout>
